# risk-of-rain-esi-edition-cpp

./: .gitignore  CMakeLists.txt
documentation/: CMakeLists.txt  Doxyfile.in
include/: Animation.hpp  Area.hpp  AreaType.hpp  Areas.hpp  Attack.hpp  Attacks.hpp  Buff.h  Buff.hpp  Capabilities.hpp  Character.hpp  CharacterModifier.h  Chest.hpp  Climb.hpp  Dash.hpp  Direction.hpp  Enemies.hpp  Enemy.hpp  Fragment.hpp  Game.hpp  GameController.hpp  GameOverException.hpp  Health.hpp  InterractiveObject.hpp  Item.h  Item.hpp  Items.hpp  JetPack.hpp  Jump.hpp  Level.hpp  Movement.hpp  Movements.hpp  Player.hpp  Run.hpp  Spawn.hpp  Texture.hpp  Tile.hpp  Weapon.h
src/: Animation.cpp  Area.cpp  Attack.cpp  CMakeLists.txt  Capabilities.cpp  Character.cpp  Chest.cpp  Climb.cpp  Dash.cpp  Direction.cpp  Enemies.cpp  Enemy.cpp  Fragment.cpp  Game.cpp  GameController.cpp  GameOverException.cpp  InteractiveObject.cpp  Item.cpp  JetPack.cpp  Jump.cpp  Level.cpp  Movement.cpp  Player.cpp  Run.cpp  Spawn.cpp  Tile.cpp
test/: CMakeLists.txt  testArea.cpp  testAttack.cpp  testDefinedAreas.cpp  testGame.cpp  testGameController.cpp  testMain.cpp  testMovement.cpp  testSpawn.cpp
